Fix an display issue with scrollbar on Firefox and Edge

--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -3,7 +3,7 @@
     min-height: calc(100vh - 140px);
     margin-bottom: 140px;
     padding: .5rem 0;
-    overflow-y: scroll;// force to scroll, 'auto' doesn't seem to work
+    overflow-y: auto;// force to scroll, 'auto' doesn't seem to work
     scroll-behavior: smooth;// Firefox 49+, Experimental Feature in Chrome 41+
     -webkit-overflow-scrolling: touch;// lazy scrolling in webkit
 }
